--- a/src/app/vistas/vistas.component.html
+++ b/src/app/vistas/vistas.component.html
@@ -7,14 +7,4 @@
   </li>
 </ul>
 
-<div *ngIf="selectedVista">
-
-  <h2>{{ selectedVista.name | uppercase }}</h2>
-  <div><span>rank: </span>{{ selectedVista.rank }}</div>
-  <div>
-    <label>name:
-      <input [(ngModel)]="selectedVista.name" placeholder="name"/>
-    </label>
-  </div>
-
-</div>
+<app-vista-detail [vista]="selectedVista"></app-vista-detail>
