Begin adding routing to app

--- a/src/app/vistas/vistas.component.html
+++ b/src/app/vistas/vistas.component.html
@@ -1,4 +1,4 @@
-<h2>Locations</h2>
+<!-- <h2>Locations</h2> -->
 <ul class="vistas">
   <li *ngFor="let vista of vistas"
     [class.selected]="vista === selectedVista"
