--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <h1>{{ title }}</h1>
-<app-vistas></app-vistas>
+<nav>
+    <a routerLink="/vistas">Locations</a>
+  </nav>
+<router-outlet></router-outlet>
+
+<!-- <app-vistas></app-vistas> -->
