--- a/src/app/vistas/vistas.component.css
+++ b/src/app/vistas/vistas.component.css
@@ -32,7 +32,7 @@
     font-size: small;
     color: white;
     padding: 0.8em 0.7em 0 0.7em;
-    background-color:#405061;
+    background-color:rgb(18, 109, 139);
     line-height: 1em;
     position: relative;
     left: -1px;
