--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
-<p>dashboard works!</p>
+<h3>Top Heroes</h3>
+<div class="grid grid-pad">
+  <a *ngFor="let vista of vistas" class="col-1-4">
+    <div class="module vista">
+      <h4>{{vista.name}}</h4>
+    </div>
+  </a>
+</div>
