Add dashboard component that works now

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,9 @@
 <h1>{{ title }}</h1>
 
 <nav>
-    <a routerLink="">Home</a>
+    <a routerLink="/dashboard">Dashboard</a>
+    <br>
+    <!-- <a routerLink="/vistas">Locations</a> -->
   </nav>
-<nav>
-    <a routerLink="/vistas">Locations</a>
-  </nav>
-  <!--These routing links aren't done yet so they just lead to /vistas for now-->
-  <nav>
-    <a routerLink="/vistas">Photo Tips</a>
-  </nav>
-  <nav>
-    <a routerLink="/vistas">About</a>
-  </nav>
-<!--end placeholder router links-->
 
 <router-outlet></router-outlet>
