--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
-<h3>Top Heroes</h3>
+<h3>Popular Locations</h3>
+
 <div class="grid grid-pad">
-  <a *ngFor="let vista of vistas" class="col-1-4">
+  <a *ngFor="let vista of vistas" class="col-1-4"
+  routerLink="/detail/{{vista.rank}}">
     <div class="module vista">
       <h4>{{vista.name}}</h4>
     </div>
