--- a/src/app/vista-detail/vista-detail.component.html
+++ b/src/app/vista-detail/vista-detail.component.html
@@ -1,11 +1,12 @@
 <div *ngIf="vista">
 
         <h2>{{ vista.name | uppercase }}</h2>
-        <div><span>rank: </span>{{ vista.rank }}</div>
+        <div><span>rank: </span>{{vista.rank}}</div>
         <div>
           <label>name:
             <input [(ngModel)]="vista.name" placeholder="name"/>
           </label>
         </div>
+        <button (click)="goBack()">Back</button>
       
       </div>
