--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -31,16 +31,16 @@
   .module {
     padding: 20px;
     text-align: center;
-    color: #eee;
+    color: #212922;
     max-height: 120px;
     min-width: 120px;
-    background-color: #3f525c;
+    background-color: #46b1c9;
     border-radius: 2px;
   }
   .module:hover {
-    background-color: #eee;
+    background-color: #d8e1e9;
     cursor: pointer;
-    color: #607d8b;
+    color: #46b1c9;
   }
   .grid-pad {
     padding: 10px 0;
