--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,3 +37,8 @@
   </nav>
 
 <router-outlet></router-outlet>
+
+<!-- <like
+  [likesCount]="tweet.likesCount"
+  [isActive]="tweet.isLiked"
+></like> -->
