--- a/src/app/vista-detail/vista-detail.component.html
+++ b/src/app/vista-detail/vista-detail.component.html
@@ -2,11 +2,6 @@
 
         <h2>{{ vista.name | uppercase }}</h2>
 
-        <!-- <like
-          [likesCount]="heart.likesCount"
-          [isActive]="heart.isLiked"
-        ></like> -->
-
         <div><span>rank: </span>{{vista.rank}}</div>
         <div>
           <label>name:
@@ -15,6 +10,8 @@
         </div>
         <div><span>address: </span>{{vista.address}}</div>
         <br>
+        <likes-box></likes-box>
+        <br><br>
         <button (click)="goBack()">Back</button>
       
       </div>
